move tinygltf to tools only

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -3,7 +3,14 @@ project(Tools)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(TestTool PackageGLTF/packageGLTF.cpp)
+add_executable(
+        TestTool
+
+        PackageGLTF/main.cpp
+
+        PackageGLTF/gltfloader.cpp
+        PackageGLTF/tinygltfImpl.cpp
+)
 
 target_precompile_headers(TestTool REUSE_FROM GameEngine)
 
@@ -12,4 +19,6 @@ target_link_libraries(TestTool PRIVATE GameEngine)
 target_include_directories(
         TestTool PUBLIC
         ../GameEngine/src
+
+        ../Dependencies/tinygltf/include
 )
