--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(
 
         PackageGLTF/main.cpp
 
-        PackageGLTF/gltfloader.cpp
+        PackageGLTF/gltfPacker.cpp
         PackageGLTF/tinygltfImpl.cpp
 )
 
