remove stb and json from tinygltf

--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -76,6 +76,7 @@ target_include_directories(
         ../Dependencies/imgui/include
         ../Dependencies/entt/include
         ../Dependencies/nlohmannjson/include
+        ../Dependencies/nlohmannjson/include/nlohmann # since tinygltf attempts to include json.hpp, not nlohmann/json.hpp
         ../Dependencies/stb/include
 )
 
