--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -30,7 +30,21 @@ if (EMSCRIPTEN)
             -sUSE_WEBGPU=1
             -sUSE_GLFW=3
             -sALLOW_MEMORY_GROWTH
+            #            -O2
     )
+    #    target_compile_options(
+    #            Sandbox PRIVATE
+    #            -O2
+    #    )
+    #
+    #    target_link_options(
+    #            GameEngine PRIVATE
+    #            -O2
+    #    )
+    #    target_compile_options(
+    #            GameEngine PRIVATE
+    #            -O2
+    #    )
 endif ()
 
 target_precompile_headers(Sandbox REUSE_FROM GameEngine)
