--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(
         PackageHDRI
 
         PackageHDRI/main.cpp
+        PackageHDRI/computeIrradiance.cpp
 )
 target_precompile_headers(PackageHDRI REUSE_FROM GameEngine)
 target_link_libraries(PackageHDRI PRIVATE GameEngine)
