use FetchContent to get dawn

--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -98,12 +98,43 @@ target_include_directories(
 )
 
 if (NOT EMSCRIPTEN)
+    # to prevent some warnings from tint
+    if (WIN32)
+        set(CMAKE_OBJECT_PATH_MAX 256)
+    endif ()
+
+    # this doesn't seem to work on dawn versions after 3d35d57ea306e9365c04d92208a849bfbfb1eb4a
+    # maybe check the newest dawn commit in the future to see if it will build statically
+    # (it actually builds statically even without this on this current dawn commit)
+    set(BUILD_SHARED_LIBS OFF)
+
+    # since dawn is not fetched with all its submodules, this will get the required dependencies
     set(DAWN_FETCH_DEPENDENCIES ON)
-    add_subdirectory(../dawn ${CMAKE_BINARY_DIR}/dawn EXCLUDE_FROM_ALL)
+
+    # from: https://groups.google.com/g/dawn-graphics/c/u8gq_EGfFU0
+    set(TINT_BUILD_TESTS OFF CACHE BOOL INTERNAL)
+    set(TINT_LIB_FUZZING_ENGINE_LINK_OPTIONS OFF CACHE STRING INTERNAL)
+    set(BUILD_SAMPLES OFF CACHE BOOL INTERNAL)
+
+    include(FetchContent)
+    FetchContent_Declare(
+            dawn
+            GIT_REPOSITORY https://dawn.googlesource.com/dawn.git
+            GIT_TAG 3d35d57ea306e9365c04d92208a849bfbfb1eb4a
+            GIT_SUBMODULES ""
+            GIT_SUBMODULES_RECURSE OFF
+    )
+    set(FETCHCONTENT_QUIET NO)
+    FetchContent_GetProperties(dawn)
+    if (NOT dawn_POPULATED)
+        FetchContent_Populate(dawn)
+        add_subdirectory(${dawn_SOURCE_DIR} ${dawn_BINARY_DIR} EXCLUDE_FROM_ALL)
+    endif ()
+
     target_link_libraries(GameEngine PUBLIC webgpu_cpp webgpu_dawn webgpu_glfw)
     target_include_directories(
             GameEngine PUBLIC
-            ../dawn/third_party/glfw/include
+            ${dawn_SOURCE_DIR}/third_party/glfw/include
     )
 
     target_include_directories(
