start asset package system

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Tools)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
-        TestTool
+        PackageGLTF
 
         PackageGLTF/main.cpp
 
@@ -12,10 +12,10 @@ add_executable(
         PackageGLTF/tinygltfImpl.cpp
         PackageGLTF/texturePacker.cpp
 )
-target_precompile_headers(TestTool REUSE_FROM GameEngine)
-target_link_libraries(TestTool PRIVATE GameEngine)
+target_precompile_headers(PackageGLTF REUSE_FROM GameEngine)
+target_link_libraries(PackageGLTF PRIVATE GameEngine)
 target_include_directories(
-        TestTool PUBLIC
+        PackageGLTF PUBLIC
         ../GameEngine/src
 
         ../Dependencies/tinygltf/include
@@ -44,5 +44,17 @@ target_precompile_headers(PackageHDRI REUSE_FROM GameEngine)
 target_link_libraries(PackageHDRI PRIVATE GameEngine)
 target_include_directories(
         PackageHDRI PUBLIC
+        ../GameEngine/src
+)
+
+add_executable(
+        PackageAssets
+
+        PackageAssets/main.cpp
+)
+target_precompile_headers(PackageAssets REUSE_FROM GameEngine)
+target_link_libraries(PackageAssets PRIVATE GameEngine)
+target_include_directories(
+        PackageAssets PUBLIC
         ../GameEngine/src
 )
