--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Sandbox)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dist)
 
-add_executable(
-        Sandbox
-        resources.rc
+set(
+        SANDBOX_SOURCES
 
         src/main.cpp
 
@@ -22,6 +21,12 @@ add_executable(
 
         src/utility/utility.cpp
 )
+
+if (WIN32 AND NOT EMSCRIPTEN)
+    list(APPEND SANDBOX_SOURCES resources.rc)
+endif ()
+
+add_executable(Sandbox ${SANDBOX_SOURCES})
 
 if (EMSCRIPTEN)
     target_link_options(
