--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(GameEngineProject)
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(GameEngine)
-add_subdirectory(Tools)
+
+if (NOT EMSCRIPTEN)
+    add_subdirectory(Tools)
+endif ()
